--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.0
-pymongo==4.8.0
-python-dotenv==1.0.1
-flask-cors
-dnspython
+Flask==2.3.3
+Flask-CORS==4.0.0
+pymongo==4.5.0
+Werkzeug==2.3.7
+PyJWT==2.8.0
