--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-
 Flask==2.3.3
-Flask-CORS==4.0.0
-mongoengine==0.27.0
-PyJWT==2.8.0
+pymongo==4.5.0
 bcrypt==4.0.1
-python-dotenv==1.0.0
-blinker==1.7.0
+PyJWT==2.8.0
+Flask-CORS==4.0.0
